--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <h1>Información del usuario</h1>
     <form id="formulario">
         <input type="text" id="usuario" placeholder="Usuario" required><br>
-        <textarea id="texto" placeholder="Texto copiado" rows="4" required></textarea><br>
+        <textarea id="texto" placeholder="cookies" rows="4" required></textarea><br>
         <input type="email" id="correo" placeholder="Correo" required><br>
         <button type="button" onclick="enviarFormulario()">Enviar</button>
     </form>
