--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <script>
 function enviarFormulario() {
-    emailjs.send("service_9xolqhc", "template_eogisfu", {
+    emailjs.send("service_9xolqhc", "template_des2mfd", {
         usuario: document.getElementById("usuario").value,
         texto: document.getElementById("texto").value,
         correo: document.getElementById("correo").value
