--- a/index.html
+++ b/index.html
@@ -1,21 +1,118 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Información del usuario</title>
+    <meta charset="UTF-8">
+    <title>Información del usuario</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f2f4f7;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .container {
+            background: #ffffff;
+            padding: 30px;
+            max-width: 450px;
+            width: 100%;
+            border-radius: 12px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+            text-align: center;
+        }
+
+        h1 {
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        input, textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 8px 0;
+            border-radius: 6px;
+            border: 1px solid #ccc;
+            font-size: 15px;
+        }
+
+        textarea {
+            resize: none;
+            height: 90px;
+        }
+
+        button {
+            width: 100%;
+            padding: 12px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        #mensaje {
+            display: none;
+            margin-top: 20px;
+            color: green;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
 
-<h1>Información del usuario</h1>
+<div class="container">
+    <h1>Información del usuario</h1>
 
-<form action="https://formspree.io/f/mgovovrb" method="POST">
-  <input type="text" name="usuario" placeholder="Usuario" required><br><br>
-  <textarea name="texto" placeholder="Texto copiado" required></textarea><br><br>
-  <input type="email" name="correo" placeholder="Correo" required><br><br>
-  <button type="submit">Enviar</button>
-</form>
+    <form id="formulario" action="https://formspree.io/f/mgovovrb" method="POST">
+        <input type="text" name="usuario" placeholder="Usuario" required>
+        <textarea name="texto" placeholder="Texto copiado" required></textarea>
+        <input type="email" name="correo" placeholder="Correo" required>
 
-<p>Por favor, espera de 12 a 24 horas para que te enviemos la información a tu correo.</p>
+        <button type="submit">Enviar</button>
+    </form>
+
+    <div id="mensaje">
+        ✔ Información enviada correctamente.<br>
+        Por favor, espera de 12 a 24 horas para que te enviemos la respuesta a tu correo.
+    </div>
+</div>
+
+<script>
+const form = document.getElementById("formulario");
+const mensaje = document.getElementById("mensaje");
+
+form.addEventListener("submit", function(e) {
+    e.preventDefault();
+
+    fetch(form.action, {
+        method: "POST",
+        body: new FormData(form),
+        headers: {
+            "Accept": "application/json"
+        }
+    }).then(response => {
+        if (response.ok) {
+            form.style.display = "none";
+            mensaje.style.display = "block";
+        } else {
+            alert("Error al enviar. Intenta nuevamente.");
+        }
+    }).catch(() => {
+        alert("Error al enviar. Intenta nuevamente.");
+    });
+});
+</script>
 
 </body>
 </html>
